added react-google-maps, converted temp data to fahrenheit, suer can now type in a name of the city and data will display

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -6,7 +6,7 @@
     <meta name="theme-color" content="#000000">
     <link rel="stylesheet" href="/style.css">
     <link rel="stylesheet" href="https://cdn.rawgit.com/twbs/bootstrap/48938155eb24b4ccdde09426066869504c6dab3c/dist/css/bootstrap.min.css">
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCGGw0KAkK5iw2vwCSucTO1vJrQSwUxucA" type="text/javascript"></script>
+    <!-- <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCGGw0KAkK5iw2vwCSucTO1vJrQSwUxucA" type="text/javascript"></script> -->
     <title>YourMeteorologist</title>
   </head>
   <body>
